--- a/app/src/main/res/layout/activity_thirdscreen.xml
+++ b/app/src/main/res/layout/activity_thirdscreen.xml
@@ -11,16 +11,35 @@
     android:background="#000"
     android:gravity="center"
     >
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.2">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="0.08"
+        >
+        <Button
+         android:layout_height="50dp" android:layout_width="150dp"
+         android:text="Sign in"
+            android:textColor="#FFFF"
+            android:background="#00000"
+            android:layout_alignParentRight="true"
+
+
+            >
+        </Button>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:orientation="vertical"
+        >
 
         <ImageView
-            android:layout_weight="0.25"
+            android:layout_weight="0.1"
             android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:src="@drawable/musifylogo"
             >
 
@@ -28,16 +47,18 @@
         </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
         android:layout_weight="0.12">
     <TextView
-        android:layout_weight="0.25"
-         android:layout_height="100dp"
-         android:layout_width="200dp"
+         android:layout_height="60dp"
+         android:layout_width="match_parent"
          android:text="Musify"
          android:gravity="left"
-         android:layout_margin="10dp"
-         android:textSize="40dp"
+         android:layout_marginTop="3dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+         android:textSize="35dp"
          android:textStyle="bold"
          android:textColor="#FFFFFF"
         >
@@ -48,18 +69,41 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.04"
+        android:layout_height="0dp"
+        android:layout_weight="0.12"
+        android:orientation="vertical"
+        >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Name"
+            android:background="@drawable/corners"
+            android:textColorHint="#e0af1f"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+
+            tools:ignore="HardcodedText">
+
+
+        </EditText>
+
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.12"
+        android:orientation="vertical"
         >
         <EditText
             android:layout_weight="0.01"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Name"
+            android:hint="Email"
             android:background="@drawable/corners"
-            android:textColor="#e0af1f"
-            android:textSize="30dp"
-            android:layout_margin="15dp"
+            android:textColorHint="#e0af1f"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             >
 
 
@@ -69,56 +113,40 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.04"
+        android:layout_height="0dp"
+        android:layout_weight="0.12"
+        android:orientation="vertical"
         >
         <EditText
             android:layout_weight="0.01"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Email"
+            android:hint="Password"
             android:background="@drawable/corners"
-            android:textColor="#e0af1f"
-            android:textSize="30dp"
-            android:layout_margin="15dp"
+            android:textColorHint="#e0af1f"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             >
 
 
         </EditText>
-
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.04"
-        >
-        <EditText
-            android:layout_weight="0.01"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Password"
-            android:background="@drawable/corners"
-            android:textColor="#e0af1f"
-            android:textSize="30dp"
-            android:layout_margin="15dp"
-            >
-
-
-        </EditText>
-
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/show"
+            ></ImageView>
 
     </RelativeLayout>
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_gravity="left"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="10dp"
         >
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:text="Gender"
             android:textSize="20dp"
             android:textColor="#e0af1f"
@@ -127,6 +155,7 @@
         </TextView>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="40dp"
@@ -169,13 +198,13 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginLeft="15dp"
-            android:src="@drawable/corners"
+            android:src="@drawable/square"
             >
 
         </ImageView>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="40dp"
             android:text="I would like to receive your newsletter and other promotional information"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="5dp"
@@ -187,20 +216,27 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.1"
+        android:layout_height="60dp"
+        android:layout_weight="0.11"
+
         >
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:src="@drawable/cornersyellow"
-            android:layout_margin="10dp">
+       <Button
+           android:layout_weight="0.1"
+           android:layout_width="match_parent"
+           android:layout_height="50dp"
+           android:background="@drawable/cornersyellow"
+           android:text="Sign up"
+           android:textColor="#FFFF"
+           android:textSize="20dp"
+           android:layout_margin="10dp"
+           >
 
+       </Button>
 
-        </ImageView>
 
 
     </LinearLayout>
+
 
 
 </LinearLayout>
